--- a/controlpanel.html
+++ b/controlpanel.html
@@ -7,6 +7,7 @@
     <title>Painel de Controle</title>
     <link rel="stylesheet" href="styles/style.css" type="text/css" media="all" />
     <link rel="stylesheet" href="styles/panel.css" title="CSS" type="text/css" media="all" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
