--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="styles/style.css" type="text/css" media="all" />
     <link rel="stylesheet" href="styles/login.css" type="text/css" media="all" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
