+pagina lojas e mudanças layout

--- a/users.html
+++ b/users.html
@@ -17,7 +17,7 @@
   <nav>
    <a href="cams.html">Câmeras</a> <span>|</span>
    <a href="users.html">Usuários</a> <span>|</span>
-   <a href="#">Lojas</a> <span>|</span>
+   <a href="lojas.html">Lojas</a> <span>|</span>
    <a href="#">Produtos</a> <span>|</span>
    <a href="#">Configurações</a> <span>|</span>
    <a href="index.html" class="sair">Sair</a>
