botao entrar login

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
      <label for="username">Usuário:</label>
      <input id="user" >
      <label for="pass">Senha:</label>
-     <input id="pass" type="password" autocomplete="current-password" required>     
-     <input class="entrar" type="submit" value="Entrar">
+     <input id="pass" type="password" autocomplete="current-password" required> 
+     <a href="cams.html" rel="next">    
+      <input class="entrar" type="submit" value="Entrar"></a>
      <!-- <p class="entrar"><a href="cams.html" rel="next">Entrar</a></p> -->
      
      <aside class="links">
